--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.1.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.543.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.2",
+    "sweetalert2": "^11.23.0",
+    "tailwindcss": "^4.1.13",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
